k8s/glances/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: glances
  labels:
    app: glances
spec:
  replicas: 1
  selector:
    matchLabels:
      app: glances
  template:
    metadata:
      labels:
        app: glances
    spec:
      hostNetwork: false
      containers:
        - name: glances
          image: nicolargo/glances:latest
          ports:
            - containerPort: 61208
              name: http
