k8s/glances/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: glances
spec:
  type: ClusterIP
  ports:
    - port: 61208
      targetPort: http
      name: http
  selector:
    app: glances
