k8s/glances/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: glances
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: glances.thuis
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: glances
                port:
                  name: http
